Updated some js files

--- a/projects/hotmart/index.html
+++ b/projects/hotmart/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="public/css/import.css">
-  <script type="text/javascript" src="public/js/main.js"></script>
+  <script type="text/javascript" src="public/js/main.min.js"></script>
 
   <title>Hotmart Test</title>
 </head>
