Fixed action form

--- a/projects/testingweb30/forms.html
+++ b/projects/testingweb30/forms.html
@@ -294,7 +294,7 @@
                 </div>
 
                 <div class="mdl-card__supporting-text">
-                    <form action="form-submit.html" class="form">
+                    <form action="forms-submit.html" class="form">
                         <div class="form__article">
                             <h3>Personal data</h3>
 
